<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" >

    <!-- title -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/qianshou_return"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:src="@mipmap/back"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/persion_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--单号信息-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/express_info"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Order_information"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dao_Order_number"
                            android:layout_marginLeft="55dp"
                            android:textSize="14sp"
                            android:textColor="@color/gray"/>

                        <TextView
                            android:id="@+id/qianshou_billwayno"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:textSize="14sp"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="1dp"
                    android:background="@color/gray_line" />

                <!--寄件人信息-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@mipmap/bluepeople"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/sender_info"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="13dp"
                        android:text="@string/dao_sender"/>
                    <TextView
                        android:id="@+id/qianshou_sender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="13dp"
                        android:text="@string/dao_sender_tel"/>
                    <TextView
                        android:id="@+id/qianshou_sender_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="13dp"
                        android:text="@string/dao_sender_address"/>
                    <TextView
                        android:id="@+id/qianshou_sender_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="1dp"
                    android:background="@color/gray_line" />

                <!--收件人信息-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@mipmap/bluepeople"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/receiver_info"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="13dp"
                        android:text="@string/dao_recipients"/>
                    <TextView
                        android:id="@+id/qianshou_receiver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="13dp"
                        android:text="@string/dao_recipients_tel"/>
                    <TextView
                        android:id="@+id/qianshou_receiver_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="13dp"
                        android:text="@string/dao_recipients_addre"/>
                    <TextView
                        android:id="@+id/qianshou_receiver_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="1dp"
                    android:background="@color/gray_line" />

                <!--到付款信息-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@mipmap/information"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/dao_acount"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dingdanffL"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="55dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="45dp"
                        android:textColor="@color/red"
                        android:text="@string/dindanfeiyong"/>

                    <TextView
                        android:id="@+id/qianshou_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/daishouhuokuanfeeL1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="55dp"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="45dp"
                        android:textColor="@color/red"
                        android:text="@string/daishouhuokuan"/>

                    <TextView
                        android:id="@+id/daishouhuokuanfee1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/checkboxT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="55dp"
                    android:visibility="gone"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_marginRight="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gouxuan"
                        android:textColor="@color/red"/>

                    <CheckBox
                        android:id="@+id/dingdanfeebox"
                        android:layout_width="25dp"
                        android:layout_height="25dp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="1dp"
                    android:background="@color/gray_line" />

                <!--签收人信息-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@mipmap/bluepeople"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/Signature_Info"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="52dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="3dp"
                        android:src="@mipmap/star"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/Signature"/>

                    <EditText
                        android:id="@+id/qianshou_info"
                        android:layout_width="200dp"
                        android:layout_height="28dp"
                        style="@style/BlackSmallTextStyle"
                        android:background="@drawable/edittext_grey"
                        android:paddingLeft="15dp"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:editable="false"
                        android:hint="@string/dao_input_signer"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="300px"
                    android:layout_height="300px"
                    android:layout_marginTop="20px"
                    android:layout_marginLeft="30px"
                    android:background="#FFFFFF"
                    android:id="@+id/qianshou_username"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="1dp"
                    android:background="@color/gray_line" />
                <!--上传照片-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@mipmap/camera"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/upload_photos"/>
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/qianshou_submit_picAddr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="80px"
                    android:choiceMode="singleChoice"
                    android:divider="@null"
                    android:fadingEdge="none"
                    android:listSelector="@android:color/transparent"
                    android:scrollbarStyle="outsideOverlay"
                    app:layoutManager="android.support.v7.widget.GridLayoutManager"
                    app:spanCount="3"
                    tools:listitem="@layout/list_item_image"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/one_qianshou_button"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/blue"
                    android:text="@string/upload"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>