<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/connor"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50px"
        android:background="@drawable/connor_yellow"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20px"
            android:gravity="center"
            android:src="@mipmap/car"
            android:text="@string/xiadantime"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/create_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16px"
            android:maxLength="19"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="24px"
        android:orientation="horizontal" >

        <TextView
            style="@style/BlackMSmallTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_number" />

        <TextView
            android:id="@+id/main_express_no"
            style="@style/BlackMSmallTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24px"
        android:layout_marginLeft="20px"
        android:layout_marginTop="16px"
        android:orientation="horizontal" >

        <TextView
            style="@style/BlackMSmallTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tongji_address" />

        <TextView
            android:id="@+id/pot"
            style="@style/BlackMSmallTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>